# acs-web-aca-aoai-realtime

./: .gitignore  README.md  build_container.sh  startup_server.sh  startup_web.sh
server/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  aoai_realtime.py  app.py  foundry_agent.py  main.py  pyproject.toml  requirements.txt  unified_gateway.py
server/prompts/: aoai_instructions.txt
server/scripts/: acs_media_ws_server.py  ws_probe.py
web/: .dockerignore  .env.example  Dockerfile  docker-entrypoint.sh  index.html  main.js  nginx.conf  nginx.conf.template  package-lock.json  package.json  vite.config.js
web/public/: audio-playback-worklet.js  audio-worklet.js
